# aegis-protocol

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md
.github/workflows/: ci.yml
crates/aegis-cli/: Cargo.toml  README.md
crates/aegis-cli/src/: main.rs
crates/aegis-protocol/: Cargo.toml  README.md
crates/aegis-protocol-codegen/: Cargo.toml  README.md
crates/aegis-protocol-codegen/src/: lib.rs
crates/aegis-protocol-core/: Cargo.toml  LICENSE-MIT  README.md
crates/aegis-protocol-core/src/: budget.rs  capability.rs  codec.rs  error.rs  flags.rs  frame.rs  identity.rs  lib.rs  policy.rs  replay.rs  schema.rs  session.rs  slots.rs  varint.rs  view.rs
crates/aegis-protocol-idl/: Cargo.toml  README.md
crates/aegis-protocol-idl/src/: ast.rs  canonical.rs  error.rs  lib.rs  parser.rs  validation.rs
crates/aegis-protocol-token/: Cargo.toml  README.md
crates/aegis-protocol-token/src/: algorithm.rs  claims.rs  codec.rs  compact.rs  error.rs  flags.rs  lib.rs  token.rs
crates/aegis-protocol-wire/: Cargo.toml  LICENSE-APACHE  README.md
crates/aegis-protocol-wire/src/: control.rs  envelope.rs  flow.rs  hot.rs  layout.rs  lib.rs  stream.rs  validator.rs
crates/aegis-protocol/src/: lib.rs
docs/: ACT.md  IDL.md  IMPROVEMENTS.md  PUBLISHING.md  SECURITY_MODEL.md  SPEC_DRAFT.md
examples/: capability_token.act  capability_token.act.txt  capture_payment.aegis  trade_executed.aegis
