[package]
name = "aegis-protocol-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Command-line tool for the experimental Aegis secure binary protocol."
readme = "README.md"
keywords = ["protocol", "cli", "schema", "idl", "aegis"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "aegis"
path = "src/main.rs"

[dependencies]
aegis-protocol-codegen = { path = "../aegis-protocol-codegen", version = "0.1.0" }
aegis-protocol-idl = { path = "../aegis-protocol-idl", version = "0.1.0" }
aegis-protocol-wire = { path = "../aegis-protocol-wire", version = "0.1.0" }
