[package]
name = "aegis-protocol-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core safe primitives for the experimental Aegis secure binary protocol."
readme = "README.md"
keywords = ["protocol", "binary", "security", "wire", "network"]
categories = ["encoding", "network-programming", "parser-implementations"]

[features]
default = ["std"]
std = []
alloc = []

[dependencies]
