[package]
name = "aegis-protocol-idl"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Minimal IDL parser for the experimental Aegis secure binary protocol."
readme = "README.md"
keywords = ["protocol", "idl", "schema", "parser", "aegis"]
categories = ["parser-implementations", "encoding"]

[dependencies]
