[package]
name = "aegis-protocol-token"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Aegis Capability Token primitives for the experimental Aegis secure binary protocol."
readme = "README.md"
keywords = ["protocol", "token", "security", "capability", "aegis"]
categories = ["authentication", "encoding", "network-programming"]

[features]
default = ["std"]
std = ["alloc", "aegis-protocol-core/std"]
alloc = ["aegis-protocol-core/alloc"]

[dependencies]
aegis-protocol-core = { path = "../aegis-protocol-core", version = "0.1.0", default-features = false }
